minor optimized for jvm params